--- a/templates/homepage/login.html
+++ b/templates/homepage/login.html
@@ -43,6 +43,7 @@
 						$("#msg_danger").text(data["data"]);
 						$("#msg_danger").show();
 					}
+					window.location.href="/home/index";
 				}
 			})
 			
