--- a/templates/homepage/cache.html
+++ b/templates/homepage/cache.html
@@ -18,7 +18,7 @@
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //for-mobile-apps -->
 	<!-- js -->
-		<script type="text/javascript" src="{{static_url("js/jquery.min.js")}}"></script>
+		<script type="text/javascript" src="{{static_url("js/jquery-2.1.4.min.js")}}"></script>
 		<script type="text/javascript" src="{{static_url("js/bootstrap.js")}}"></script>
 	<!-- js -->
 	<!-- start-smooth-scrolling -->
