文章撰写页面添加
未登录用户将跳转到登录,已登录用户可以撰写文章并且发表

--- a/templates/homepage/login.html
+++ b/templates/homepage/login.html
@@ -1,5 +1,5 @@
 {% extends "cache.html" %}
-{% block title %}Register{% end %}
+{% block title %}Login{% end %}
 {% block content %}
 <div class="register">
 	<div class="container" >
