博客首页展示文章列表

--- a/templates/articlewrite.html
+++ b/templates/articlewrite.html
@@ -5,14 +5,10 @@
 <div class="blog-page">
 	<div class="container">
 		<div class="leave-form">
-			<h3>LEAVE YOUR OPINION</h3>
-			<form>
-				<input type="text" placeholder="Name" required="">
-				<input type="text" placeholder="Email" required="">
-				<input type="text" placeholder="Subject" required>
+			<h3>New </h3>
+				<input type="text" placeholder="Title" required="">
 				<textarea placeholder="Message" required=""></textarea>	
 				<input type="submit" value="SEND">
-			</form>
 		</div>
 	</div>
 </div>
