添加用户排行榜以及到个人页面的链接

--- a/templates/homepage/cache.html
+++ b/templates/homepage/cache.html
@@ -51,6 +51,7 @@
 					<li><a href="/home/about">About</a></li>	
 					<li><a href="/home/single">Blog</a></li>
 					<li><a href="/home/contact">Contact</a></li>
+					<li><a href="/homt/rank">Frinends</a></li>
 					{% if correct_user==None %}
 					<li><a href="/home/login">Login/Register</a></li>
 					{% else %}
