修改导航栏，修复小bug
未知bug：数据库断开连接

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,7 +9,7 @@
 			<div class="col-md-8 business-right">
 				<h3>{{article.title}}</h3>
 				<p>{{article.content}}</p>
-				<a href="/home/single">READ MORE</a>
+				<a href="/article?article_id={{article.article_id}}">READ MORE</a>
 			</div>
 			<div class="clearfix"></div>
 		{% end %}
