--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -10,7 +10,7 @@
 			<h1><i class="fa fa-map-marker"></i> 2013-2017 SouthEastUniversity</h1>
 			<p>404NotFound Club
 			<span>毕业之前总得留下点什么.--3A 404</span></p>
-			<a href="#">Join Us Now</a>
+			<a href="/home/contact">Join Us Now</a>
 			<div class="uparrow">
 				<img src="{{static_url("img/home/uparrow.png")}}" alt=""/>
 			</div>
@@ -50,36 +50,36 @@
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b4.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Lorem ipsum dolor sit amet consectetur </h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>其实一开始</h3>
+										<p>要搞博客，我是拒绝的</p>
+										<p>因为写不出好看的前端</p>
 									</div>
 									<div class="bottom-pos a"></div>
 								</div>
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b3.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Adipiscing elit auris mattis suscipit est</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>后来我励志</h3>
+										<p>努力学习前端</p>
+										<p>但是我最终</p>
 									</div>
 									<div class="bottom-pos b"></div>
 								</div>
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b2.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Mauris mattis suscipit est, ut imperdiet tortor</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>还是套了模板</h3>
+										<p>然后页面</p>
+										<p>虽然很好看!</p>
 									</div>
 									<div class="bottom-pos c"></div>
 								</div>
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b1.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Lorem ipsum dolor sit amet consectetur </h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>但是另外三只</h3>
+										<p>不来贡献内容！</p>
+										<p>所以我只能扯~~~</p>
 									</div>
 									<div class="bottom-pos d"></div>
 								</div>
@@ -91,36 +91,36 @@
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b1.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Lorem ipsum dolor sit amet consectetur </h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>其实一开始</h3>
+										<p>要搞博客，我是拒绝的</p>
+										<p>因为写不出好看的前端</p>
 									</div>
 									<div class="bottom-pos d"></div>
 								</div>
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b2.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Adipiscing elit auris mattis suscipit est</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>后来我励志</h3>
+										<p>努力学习前端</p>
+										<p>但是我最终</p>
 									</div>
 									<div class="bottom-pos c"></div>
 								</div>
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b3.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Mauris mattis suscipit est, ut imperdiet tortor</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>还是套了模板</h3>
+										<p>然后页面</p>
+										<p>虽然很好看!</p>
 									</div>
 									<div class="bottom-pos b"></div>
 								</div>
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b4.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Lorem ipsum dolor sit amet consectetur </h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>但是另外三只</h3>
+										<p>不来贡献内容！</p>
+										<p>所以我只能扯~~~</p>
 									</div>
 									<div class="bottom-pos a"></div>
 								</div>
@@ -132,36 +132,36 @@
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b4.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Lorem ipsum dolor sit amet consectetur </h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>其实一开始</h3>
+										<p>要搞博客，我是拒绝的</p>
+										<p>因为写不出好看的前端</p>
 									</div>
 									<div class="bottom-pos d"></div>
 								</div>
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b2.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Adipiscing elit auris mattis suscipit est</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>后来我励志</h3>
+										<p>努力学习前端</p>
+										<p>但是我最终</p>
 									</div>
 									<div class="bottom-pos b"></div>
 								</div>
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b1.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Mauris mattis suscipit est, ut imperdiet tortor</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>还是套了模板</h3>
+										<p>然后页面</p>
+										<p>虽然很好看!</p>
 									</div>
 									<div class="bottom-pos a"></div>
 								</div>
 								<div class="bottom-grid">
 									<img src="{{static_url("img/home/b3.jpg")}}" alt=""/>
 									<div class="bottom-info">
-										<h3>Lorem ipsum dolor sit amet consectetur </h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-										Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. </p>
+										<h3>但是另外三只</h3>
+										<p>不来贡献内容！</p>
+										<p>所以我只能扯~~~</p>
 									</div>
 									<div class="bottom-pos c"></div>
 								</div>
@@ -178,14 +178,14 @@
 	<div class="container">
 		<div class="slider-grids">
 			<div class="col-md-6 slider-grid">
-				<h3>Lorem ipsum dolor sit amet consectetur adipiscing elit
+				<h3>其实一开始，我是拒绝的 adipiscing elit
 					Mauris mattis suscipit est, ut imperdiet tortor. Proin sed </h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt egestas non at odio. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
 				<a href="#" class="hvr-rectangle-in button">BUTTON</a>
 				<a href="#" class="hvr-rectangle-out button">BUTTON</a>
 			</div>
 			<div class="col-md-6 slider-grid">
-				<h3>Lorem ipsum dolor sit amet consectetur adipiscing elit
+				<h3>其实一开始，我是拒绝的 adipiscing elit
 					Mauris mattis suscipit est, ut imperdiet tortor. Proin sed </h3>
 				<p class="para-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt egestas non at odio.</p>
 				<p>nterdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vitae lectus erat. Duis consequat laoreet velit. Mauris convallis, sapien sit amet scelerisque accumsan, felis urna aliquet nunc, viverra mollis odio tellus a nisl. Nulla lobortis lectus non rutrum viverra. Sed et molestie libero. Sed ut ultrices dui.</p>
@@ -196,14 +196,16 @@
 </div> -->
 <!-- //slider-bottom -->
 <!-- article -->
-<div class="article">
+                <!-- 文章列表 -->
+
+<!-- <div class="article">
 	<div class="container">
 		<h3>LATEST ARTICLES</h3>
 	</div>
-</div>
+</div> -->
 <!-- //article -->
 <!-- portfolio -->
-<div class="article-grids">
+<!-- <div class="article-grids">
 	<div class="col-md-2 article-grid">
 		<a href="single.html"><img src="{{static_url("img/home/p10.jpg")}}" alt=""/></a>
 		<div class="article-info">
@@ -289,25 +291,27 @@
 		</div>
 	</div>
 	<div class="clearfix"></div>
-</div>
+</div> -->
 <!-- //article -->
 <!-- laptop slider -->
+<div class="article">
+	<div class="container">
+		<h3>MY FAVORITE</h3>
+	</div>
+</div>
 <div class="flex-slider">
 	<div class="container">
 		<ul id="flexiselDemo1">			
 			<li>
-				<div class="laptop">
-					<img src="{{static_url("img/home/laptopa.png")}}" alt=""/>
+				<div class="mylaptop">
+					<img src="{{static_url("img/home/fiora.jpg")}}" alt=""/>
+					<p>Fiora</p>
 				</div>
 			</li>
 			<li>
-				<div class="laptop">
-					<img src="{{static_url("img/home/laptop1.png")}}" alt=""/>
-				</div>
-			</li>
-			<li>
-				<div class="laptop">
-					<img src="{{static_url("img/home/laptop2.png")}}" alt=""/>
+				<div class="mylaptop">
+					<img src="{{static_url("img/home/answer.jpg")}}" alt=""/>
+					<p>Answer</p>
 				</div>
 			</li>
 		</ul>
@@ -341,204 +345,7 @@
 					<script type="text/javascript" src="{{static_url("js/jquery.flexisel.js")}}"></script>
 	</div>
 </div>
-<!-- //laptop slider -->
-<!-- portfolio -->
-<div class="our-works">
-		<div class="our-work-info text-center wow bounceIn" data-wow-delay="0.4s">	
-		</div>	
-		<div class="portfolio-grid">
-			<div class="col-md-4 port-left">
-					<ul id="filters">
-						<li class="active"><span class="filter " data-filter="app card icon mov set">Vector Calculator</span> </li>
-						<li><span class="filter" data-filter="app"> Progress Bar</span></li>
-						<li><span class="filter" data-filter="card">Browser Surround</span></li>
-						<li><span class="filter" data-filter="icon">Vector Buttons</span></li>
-						<li><span class="filter" data-filter="set">Rating Stars</span></li>
-						<li><span class="filter" data-filter="mov">Icon Set</span></li>
-					</ul>
-			</div>
-			<div class="col-md-8 port-right">
-				<div id="portfoliolist">
-							<div class="port-grid">
-								<div class="portfolio card mix_all" data-cat="card" style="display: inline-block; opacity: 1;">
-									<div class="portfolio-wrapper ">		
-											<a href="#small-dialog1" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
-												<img class="img-responsive" src="{{static_url("img/home/555.jpg")}}" alt=""  />
-												<div class="simple-in">
-												
-												</div>
-											</a>
-																		
-									</div>
-								</div>				
-								<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
-										<div class="portfolio-wrapper">		
-											<a href="#small-dialog2" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
-												<img class="img-responsive" src="{{static_url("img/home/222.jpg")}}" alt=""/>
-												<div class="simple-in one">
-													
-												</div>
-											</a>
-																			
-										</div>
-								</div>		
-								
-							</div>	
-							<div class="port-grid">
-								<div class="portfolio mov mix_all" data-cat="mov" style="display: inline-block; opacity: 1;">
-									<div class="portfolio-wrapper ">		
-										<a href="#small-dialog3" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
-										<img class="img-responsive" src="{{static_url("img/home/333.jpg")}}" alt=""  />
-										<div class="simple-in three">
-													
-										</div>	
-										</a>
-																	
-									</div>
-								</div>	
-								<div class="portfolio icon mix_all" data-cat="icon" style="display: inline-block; opacity: 1;">
-									<div class="portfolio-wrapper ">		
-										<a href="#small-dialog4" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
-											<img class="img-responsive" src="{{static_url("img/home/666.jpg")}}" alt=""  />
-											<div class="simple-in four">
-												
-											</div>	
-										</a>
-																		
-									</div>
-								</div>			
-								
-							</div>
-							<div class="port-grid">
-								<div class="portfolio mov mix_all" data-cat="mov" style="display: inline-block; opacity: 1;">
-									<div class="portfolio-wrapper">		
-										<a href="#small-dialog5" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
 
-											<img class="img-responsive" src="{{static_url("img/home/444.jpg")}}" alt=""  />
-											<div class="simple-in six">
-												
-											</div>	
-										</a>
-																	
-									</div>
-								</div>
-								<div class="portfolio set mix_all" data-cat="set" style="display: inline-block; opacity: 1;">
-									<div class="portfolio-wrapper">		
-										<a href="#small-dialog6" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
-
-											<img class="img-responsive" src="{{static_url("img/home/555.jpg")}}" alt=""  />						    
-												<div class="simple-in seven">
-													
-												</div>
-										</a>
-																	
-									</div>
-								</div>
-								
-							</div>	
-				</div>	
-			</div>	
-			<!-- pop-up-box -->
-					<!-- script for pop-up-box -->
-					<script type="text/javascript" src="{{static_url("js/modernizr.custom.min.js")}}"></script>    
-					<link href="{{static_url("css/popuo-box.css")}}" rel="stylesheet" type="text/css" media="all" />
-					<script src="{{static_url("js/jquery.magnific-popup.js")}}" type="text/javascript"></script>
-					<!-- //script for pop-up-box -->
-					<!-- <div id="small-dialog1" class="mfp-hide">
-						<div class="image-top">
-							<img src="{{static_url("img/home/555.jpg")}}" alt="" />
-								
-						</div>
-					</div>
-					<div id="small-dialog2" class="mfp-hide">
-						<div class="image-top">
-							<img src="{{static_url("img/home/222.jpg")}}" alt="" />
-							
-						</div>
-					</div>
-					<div id="small-dialog3" class="mfp-hide">
-						<div class="image-top">
-							<img src="{{static_url("img/home/333.jpg")}}" alt="" />
-							
-						</div>
-					</div>
-					<div id="small-dialog4" class="mfp-hide">
-						<div class="image-top">
-							<img src="{{static_url("img/home/666.jpg")}}" alt="" />
-							
-						</div>
-					</div>
-					<div id="small-dialog5" class="mfp-hide">
-						<div class="image-top">
-							<img src="{{static_url("img/home/444.jpg")}}" alt="" />
-							
-						</div>
-					</div>
-					<div id="small-dialog6" class="mfp-hide">
-						<div class="image-top">
-							<img src="{{static_url("img/home/555.jpg")}}" alt="" />
-						
-						</div>
-					</div> -->
-					
-			<script>
-						$(document).ready(function() {
-						$('.popup-with-zoom-anim').magnificPopup({
-							type: 'inline',
-							fixedContentPos: false,
-							fixedBgPos: true,
-							overflowY: 'auto',
-							closeBtnInside: true,
-							preloader: false,
-							midClick: true,
-							removalDelay: 300,
-							mainClass: 'my-mfp-zoom-in'
-						});
-																						
-						});
-			</script>
-		<!-- //pop-up-box -->			
-			<!-- Script for gallery Here -->
-				<script type="text/javascript" src="{{static_url("js/jquery.mixitup.min.js")}}"></script>
-					<script type="text/javascript">
-							$(function () {
-								var filterList = {
-									init: function () {
-										// MixItUp plugin
-										// http://mixitup.io
-										$('#portfoliolist').mixitup({
-											targetSelector: '.portfolio',
-											filterSelector: '.filter',
-											effects: ['fade'],
-											easing: 'snap',
-											// call the hover effect
-											onMixEnd: filterList.hoverEffect()
-										});				
-									},
-									hoverEffect: function () {
-									
-										// Simple parallax effect
-										$('#portfoliolist .portfolio').hover(
-											function () {
-												$(this).find('.label').stop().animate({bottom: 0}, 200, 'easeOutQuad');
-												$(this).find('img').stop().animate({top: -30}, 500, 'easeOutQuad');				
-											},
-											function () {
-												$(this).find('.label').stop().animate({bottom: -40}, 200, 'easeInQuad');
-												$(this).find('img').stop().animate({top: 0}, 300, 'easeOutQuad');								
-											}		
-										);				
-									}
-								};
-								// Run the show!
-								filterList.init();
-							});	
-					</script>
-				<!-- Gallery Script Ends -->
-				<div class="clearfix"> </div>
-		</div>
-	
-</div>
 <!-- //portfolio -->
 <!-- slider -->
 <div class="second-slider">
@@ -570,25 +377,28 @@
 						<li>
 							<div class="sec-slid-info">
 								<img src="{{static_url("img/home/quotation.png")}}" alt=""/>
-								<h3>Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero.</h3>
+								<h3>不要为存在感而活</h3>
+								<h3>要为存在而活</h3>
 								<img class="right" src="{{static_url("img/home/quotation2.png")}}" alt=""/>
-								<p>Nam mi enim, auctor non ultricies a</p>
+								<p>存在</p>
 							</div>
 						</li>
 						<li>
 							<div class="sec-slid-info">
 								<img src="{{static_url("img/home/quotation.png")}}" alt=""/>
-								<h3>Man mi mine, rotcua non ultricies a, allignirf eu susir. Praesent viitae lorem et elit tincidunt accumsan suscipit ue bolero.</h3>
+								<h3>与其苟延残喘</h3>
+								<h3>不如纵情燃烧</h3>
 								<img class="right" src="{{static_url("img/home/quotation2.png")}}" alt=""/>
-								<p>Ultricies Nam mi enim, auctor non</p>
+								<p>追梦</p>
 							</div>
 						</li>
 						<li>
 							<div class="sec-slid-info">
 								<img src="{{static_url("img/home/quotation.png")}}" alt=""/>
-								<h3>Vam mi enim, risus non ultricies a, fringilla eu auctor. Vitae praesent lorem et elit accumsan tincidunt suscipit eu libero.</h3>
+								<h3>你有没有扔过一枚硬币</h3>
+								<h3>选择正反面</h3>
 								<img class="right" src="{{static_url("img/home/quotation2.png")}}" alt=""/>
-								<p>Auctor Nam mi enim, auctor non</p>
+								<p>命运</p>
 							</div>
 						</li>
 					</ul>
