--- a/templates/blog.html
+++ b/templates/blog.html
@@ -3,11 +3,18 @@
 
 {% block content %}
 
-<!-- business -->
+<!-- blog -->
+<div class="container">
+	<div class="clo-md-3 blog_user_info">
+		<img class="userlogo" src="{{gravatar_url}}" alt="">
+		<h6 class="username">{{blog_user.user_name}}</h6>
+		<h6><i class="fa fa-envelope-o"></i>{{blog_user.user_email}}</h6>
+	</div>
+</div>
 <div class="blog">
 	<div class="container">
 		{% for article in articles %}
-			<div class="col-md-8 blog-article">
+			<div class="col-md-12 blog-article">
 				<h3>{{article.title}}</h3>
 				<p>{{article.content}}</p>
 				<a href="/article?article_id={{article.article_id}}">READ MORE</a>
