--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -293,6 +293,7 @@
 	<div class="clearfix"></div>
 </div> -->
 <!-- //article -->
+<!-- //laptop slider -->
 <!-- laptop slider -->
 <div class="article">
 	<div class="container">
@@ -347,6 +348,202 @@
 </div>
 
 <!-- //portfolio -->
+<!-- portfolio -->
+<div class="our-works">
+		<div class="our-work-info text-center wow bounceIn" data-wow-delay="0.4s">	
+		</div>	
+		<div class="portfolio-grid">
+			<div class="col-md-4 port-left">
+					<ul id="filters">
+						<li class="active"><span class="filter " data-filter="app card icon mov set">相册集</span> </li>
+						<li><span class="filter" data-filter="app">SEU冬季</span></li>
+						<li><span class="filter" data-filter="card">冬季梅园小路</span></li>
+						<li><span class="filter" data-filter="icon">凌晨九龙湖</span></li>
+						<li><span class="filter" data-filter="set">平安夜</span></li>
+						<li><span class="filter" data-filter="mov">集合</span></li>
+					</ul>
+			</div>
+			<div class="col-md-8 port-right">
+				<div id="portfoliolist">
+							<div class="port-grid">
+								<div class="portfolio card mix_all" data-cat="card" style="display: inline-block; opacity: 1;">
+									<div class="portfolio-wrapper ">		
+											<a href="#small-dialog1" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
+												<img class="img-responsive" src="{{static_url("img/home/seuw3.jpg")}}" alt=""  />
+												<div class="simple-in">
+												
+												</div>
+											</a>
+																		
+									</div>
+								</div>				
+								<div class="portfolio app mix_all" data-cat="app" style="display: inline-block; opacity: 1;">
+										<div class="portfolio-wrapper">		
+											<a href="#small-dialog2" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
+												<img class="img-responsive" src="{{static_url("img/home/seuw1.jpg")}}" alt=""/>
+												<div class="simple-in one">
+													
+												</div>
+											</a>
+																			
+										</div>
+								</div>		
+								
+							</div>	
+							<div class="port-grid">
+								<div class="portfolio mov mix_all" data-cat="mov" style="display: inline-block; opacity: 1;">
+									<div class="portfolio-wrapper ">		
+										<a href="#small-dialog3" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
+										<img class="img-responsive" src="{{static_url("img/home/seulogo.jpg")}}" alt=""  />
+										<div class="simple-in three">
+													
+										</div>	
+										</a>
+																	
+									</div>
+								</div>	
+								<div class="portfolio icon mix_all" data-cat="icon" style="display: inline-block; opacity: 1;">
+									<div class="portfolio-wrapper ">		
+										<a href="#small-dialog4" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
+											<img class="img-responsive" src="{{static_url("img/home/seum.jpg")}}" alt=""  />
+											<div class="simple-in four">
+												
+											</div>	
+										</a>
+																		
+									</div>
+								</div>			
+								
+							</div>
+							<div class="port-grid">
+								<div class="portfolio mov mix_all" data-cat="mov" style="display: inline-block; opacity: 1;">
+									<div class="portfolio-wrapper">		
+										<a href="#small-dialog5" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
+
+											<img class="img-responsive" src="{{static_url("img/home/seunewy.jpg")}}" alt=""  />
+											<div class="simple-in six">
+												
+											</div>	
+										</a>
+																	
+									</div>
+								</div>
+								<div class="portfolio set mix_all" data-cat="set" style="display: inline-block; opacity: 1;">
+									<div class="portfolio-wrapper">		
+										<a href="#small-dialog6" class="b-link-stripe b-animate-go  thickbox play-icon popup-with-zoom-anim">
+
+											<img class="img-responsive" src="{{static_url("img/home/seuapple.jpg")}}" alt=""  />						    
+												<div class="simple-in seven">
+													
+												</div>
+										</a>
+																	
+									</div>
+								</div>
+								
+							</div>	
+				</div>	
+			</div>	
+			<!-- pop-up-box -->
+					<!-- script for pop-up-box -->
+					<script type="text/javascript" src="{{static_url("js/modernizr.custom.min.js")}}"></script>    
+					<link href="{{static_url("css/popuo-box.css")}}" rel="stylesheet" type="text/css" media="all" />
+					<script src="{{static_url("js/jquery.magnific-popup.js")}}" type="text/javascript"></script>
+					<!-- //script for pop-up-box -->
+					<div id="small-dialog1" class="mfp-hide">
+						<div class="image-top">
+							<img src="{{static_url("img/home/seuw3.jpg")}}" alt="" />
+								
+						</div>
+					</div>
+					<div id="small-dialog2" class="mfp-hide">
+						<div class="image-top">
+							<img src="{{static_url("img/home/seuw1.jpg")}}" alt="" />
+							
+						</div>
+					</div>
+					<div id="small-dialog3" class="mfp-hide">
+						<div class="image-top">
+							<img src="{{static_url("img/home/seuw3.jpg")}}" alt="" />
+							
+						</div>
+					</div>
+					<div id="small-dialog4" class="mfp-hide">
+						<div class="image-top">
+							<img src="{{static_url("img/home/seum.jpg")}}" alt="" />
+							
+						</div>
+					</div>
+					<div id="small-dialog5" class="mfp-hide">
+						<div class="image-top">
+							<img src="{{static_url("img/home/seunewy.jpg")}}" alt="" />
+							
+						</div>
+					</div>
+					<div id="small-dialog6" class="mfp-hide">
+						<div class="image-top">
+							<img src="{{static_url("img/home/seuapple.jpg")}}" alt="" />
+						
+						</div>
+					</div>
+					
+			<script>
+						$(document).ready(function() {
+						$('.popup-with-zoom-anim').magnificPopup({
+							type: 'inline',
+							fixedContentPos: false,
+							fixedBgPos: true,
+							overflowY: 'auto',
+							closeBtnInside: true,
+							preloader: false,
+							midClick: true,
+							removalDelay: 300,
+							mainClass: 'my-mfp-zoom-in'
+						});
+																						
+						});
+			</script>
+		<!-- //pop-up-box -->			
+			<!-- Script for gallery Here -->
+				<script type="text/javascript" src="{{static_url("js/jquery.mixitup.min.js")}}"></script>
+					<script type="text/javascript">
+							$(function () {
+								var filterList = {
+									init: function () {
+										// MixItUp plugin
+										// http://mixitup.io
+										$('#portfoliolist').mixitup({
+											targetSelector: '.portfolio',
+											filterSelector: '.filter',
+											effects: ['fade'],
+											easing: 'snap',
+											// call the hover effect
+											onMixEnd: filterList.hoverEffect()
+										});				
+									},
+									hoverEffect: function () {
+									
+										// Simple parallax effect
+										$('#portfoliolist .portfolio').hover(
+											function () {
+												$(this).find('.label').stop().animate({bottom: 0}, 200, 'easeOutQuad');
+												$(this).find('img').stop().animate({top: -30}, 500, 'easeOutQuad');				
+											},
+											function () {
+												$(this).find('.label').stop().animate({bottom: -40}, 200, 'easeInQuad');
+												$(this).find('img').stop().animate({top: 0}, 300, 'easeOutQuad');								
+											}		
+										);				
+									}
+								};
+								// Run the show!
+								filterList.init();
+							});	
+					</script>
+				<!-- Gallery Script Ends -->
+				<div class="clearfix"> </div>
+		</div>
+</div>
 <!-- slider -->
 <div class="second-slider">
 	<div class="container">
